substrate/frame/support/test/tests/runtime_ui/missing_system_pallet.stderr
error: `System` pallet declaration is missing. Please add this line: `pub type System = frame_system;`
  --> tests/runtime_ui/missing_system_pallet.rs:19:5
   |
19 | mod runtime {
   |     ^^^^^^^
